--- a/stories/index.scss
+++ b/stories/index.scss
@@ -63,4 +63,5 @@
 body {
   font-family: var(--rp-font-family-base);
   -webkit-font-smoothing: antialiased;
+  background-color: var(--rp-c-bg);
 }
